<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent"
	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:gravity="center_vertical">
		<ImageView android:clickable="false" android:id="@+id/ProductSmallPicture"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:minWidth="100dp" android:minHeight="100dp" android:maxWidth="100dp"
			android:maxHeight="100dp" android:adjustViewBounds="true"
			android:src="@android:drawable/ic_menu_gallery" />
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:orientation="vertical"
			android:gravity="center_vertical">
			<TextView android:text="@string/ProductBarcodeLabel"
				android:layout_width="fill_parent" android:layout_height="wrap_content" />
			<TextView android:id="@+id/ProductBarcode" android:text="{barcode}"
				android:layout_width="fill_parent" android:layout_height="wrap_content" />
		</LinearLayout>
	</LinearLayout>
	<EditText android:hint="@string/ProductName" android:id="@+id/ProductName"
		android:layout_width="fill_parent" android:layout_height="wrap_content"></EditText>
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">
		<TextView android:text="@string/EditProduct_PriceForMarket"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
		<TextView android:text="{market name}" android:id="@+id/EditPriceDialog_MarketName"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">
		<EditText android:text="" android:id="@+id/EditPrice"
			android:minWidth="200dp" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:numeric="decimal" />
		<Spinner android:id="@+id/EditCurrency" android:layout_width="fill_parent"
			android:layout_height="48dp"></Spinner>
	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:gravity="bottom"
		android:orientation="horizontal">
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:gravity="right"
			android:orientation="horizontal">
			<Button android:text="@string/AddToCartButton" android:id="@+id/AddToCartButton"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:minWidth="100dp" />
			<Button android:text="@string/Done" android:id="@+id/ProductCRUD_DoneButton"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:minWidth="100dp" />
		
</LinearLayout>
	</LinearLayout>
</LinearLayout>
